@@ -289,8 +289,10 @@ The "traditional" meta field format is:
 You can add your own metadata fields in the same manner. If you are not using
 reStructuredText, make sure the fields are in a HTML comment in output.
 
-Current Nikola versions experimentally support YAML metadata wrapped by a "---" separator
-and in that case, the usual YAML syntax is used:
+Current Nikola versions experimentally supports other metadata formats that make it more compatiblw with
+other static site generators.
+
+YAML metadata should be wrapped by a "---" separator and in that case, the usual YAML syntax is used:
 
 .. code:: yaml
 
@@ -299,6 +301,17 @@ and in that case, the usual YAML syntax is used:
    slug: how-to-make-money
    date: 2012-09-15 19:52:05 UTC
    ---
+
+TOML metadata should be wrapped by a "+++" separator and in that case, the usual TOML syntax is used:
+
+.. code:: yaml
+
+   +++
+   title = "How to make money"
+   slug =  "how-to-make-money"
+   date = "2012-09-15 19:52:05 UTC"
+   +++
+
 
 Basic
 `````
