@@ -14,4 +14,5 @@ ghp-import2>=1.0.0
 ws4py==0.4.2
 watchdog==0.8.3
 PyYAML==3.12
+toml==0.9.2
 
